tests/api/reference/negative/13-json-duplicate-key.asm
const invalid = json.file("../13-files-data/duplicate.json")
